@@ -21,11 +21,11 @@ int MTX_DLL_API fs_entry_exists(const char *path);
 void MTX_DLL_API create_directory(const char *path);
 int64_t MTX_DLL_API get_current_time_millis();
 std::string MTX_DLL_API get_application_data_folder();
+std::string MTX_DLL_API get_installation_path();
 
 #if defined(SYS_WINDOWS)
 
 bool MTX_DLL_API get_registry_key_value(const std::string &key, const std::string &value_name, std::string &value);
-std::string MTX_DLL_API get_installation_path();
 
 void MTX_DLL_API set_environment_variable(const std::string &key, const std::string &value);
 std::string MTX_DLL_API get_environment_variable(const std::string &key);
